383 tenant manage assets (#445)
- This commit introduces support for associating emission activity records with an "Asset" entity throughout the enterprise application. 
- It removes the `UserLocale` enum and replaces it with an updated `UserLanguage` enum that has improved code matching and language selection logic. 
- The commit adds new Asset-related DTO, entity, repository, and mapper classes, as well as updates existing mappers and repositories to account for the new asset concept, including mapping, querying, and record creation. 
- Several entities (Enterprise, Tenant, Building) gain static factory methods for instantiation by ID. It also improves execution time tracking in a filter by switching to millisecond precision, and makes minor changes to methods for clarity and robustness.